# io-game-framework

./: .clang-format  .clang-tidy  .clangd  .clangd-REMOVE  .dockerignore  .gitignore  .gitmodules  .ignore  AGENTS.md  ARCHITECTURAL_REVIEW.md  CMakeLists.txt  CMakePresets.json  Dockerfile.game-server  Dockerfile.signalling  LICENSE.md  PERSONAS.md  README.md  TODO.md  docker-compose.yml
docs/: netcode.md  restructure-plan.md  signalling.md  signalling_architecture.md
game/: CMakeLists.txt
game/src/client/: CMakeLists.txt  client_instance.cpp  client_instance.h  client_main.cpp  minshell.html  network_client.cpp  network_client.h  renderer.cpp  renderer.h
game/src/common/: game.cpp  game.h  network_common.cpp  network_common.h  network_server.cpp  network_server.h  server_instance.cpp  server_instance.h  state_event_manager.h  tank_components.h  tank_systems.h  types.h
game/src/server/: CMakeLists.txt  server_main.cpp
infra/: README.md  docker-compose.local-debug.yml  docker-compose.local-test.yml
notes/: architecture.md  network_architecture.md
scripts/: build-docker-all.sh  build-docker-server.sh  build-linux-client.sh  build-linux-server.sh  build-local-test.sh  build-signalling.sh  build-wasm-client.sh  build-windows-msvc-client.ps1  build-windows-msvc-server.ps1  build.sh  run-local-test.sh
signalling-server/: Dockerfile.signalling  go.mod  main.go
src/: CMakeLists.txt
src/client/: client_instance.cpp  client_instance.h  client_main.cpp  debug_draw.cpp  debug_draw.h  input.h  network_client.cpp  network_client.h  renderer.cpp  renderer.h
src/common/: ai_system.cpp  ai_system.h  car.cpp  car.h  common_main.cpp  common_main.h  game.cpp  game.h  game_state.cpp  game_state.h  network_common.h  network_server.cpp  network_server.h  physics_settings.h  server_instance.cpp  server_instance.h  state_event.h  state_event_manager.h
src/server/: server_main.cpp
